--- a/res/layout/secretary_activity.xml
+++ b/res/layout/secretary_activity.xml
@@ -48,7 +48,7 @@
                     android:id="@+id/item_tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="张秘书"
+                    android:text=""
                     android:textStyle="bold" />
 
                 <TextView
@@ -56,16 +56,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="10dp"
-                    android:text="会计"
+                    android:text=""
                     android:textColor="@color/simi_color_dark_gray"
-                    android:textSize="11sp" />
+                    android:textSize="11sp"
+                    android:visibility="gone"
+                     />
 
                 <TextView
                     android:id="@+id/item_tv_fav"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:text="工商代理人"
+                    android:text=""
                     android:textColor="@color/simi_color_dark_gray"
                     android:textSize="11sp" />
             </LinearLayout>
@@ -88,7 +90,7 @@
                     android:id="@+id/item_tv_addr_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="北京-海淀区"
+                    android:text=""
                     android:textColor="@color/simi_color_dark_gray"
                     android:textSize="11sp" />
 
@@ -104,7 +106,7 @@
                     android:id="@+id/item_tv_des_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="下单10分钟内响应"
+                    android:text=""
                     android:textColor="@color/simi_color_dark_gray"
                     android:textSize="11sp" />
             </LinearLayout>
@@ -151,7 +153,7 @@
                     android:id="@+id/item_tv_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="全市有四个分部，50多名专业人员，服务不满意，免部分费用"
+                    android:text=""
                     android:textColor="@color/simi_color_dark_gray"
                     android:textSize="11sp" />
             </LinearLayout>
