--- a/res/drawable/app_add_click.xml
+++ b/res/drawable/app_add_click.xml
@@ -5,7 +5,7 @@
     <solid android:color="@android:color/transparent" />
     <!-- 描边 -->
     <stroke
-        android:width="5px"
+        android:width="1dp"
         android:color="@color/simi_color_red" />
     <!-- 圆角 -->
     <corners
