--- a/res/drawable/company_add.xml
+++ b/res/drawable/company_add.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <!-- 实心 -->
-    <solid android:color="@android:color/transparent" />
+    <solid android:color="#4e5256" />
     <!-- 描边 -->
     <stroke
         android:width="1dp"
-        android:color="@color/simi_color_dark_gray" />
+        android:color="@color/simi_color_black" />
     <!-- 圆角 -->
     <corners
        android:radius="5dp"/>
