--- a/res/layout/layout_main_plus_morning.xml
+++ b/res/layout/layout_main_plus_morning.xml
@@ -389,7 +389,7 @@
                     android:layout_gravity="center_vertical"
                     android:background="@drawable/login_btn_bg_selector"
                     android:gravity="center"
-                    android:text="发起叫早"
+                    android:text="发布公告"
                     android:textColor="@android:color/white" >
                 </Button>
             </LinearLayout>
