--- a/res/layout/user_msg_list_item.xml
+++ b/res/layout/user_msg_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal" >
@@ -10,13 +11,20 @@
         android:layout_gravity="center"
         android:orientation="horizontal" >
 
-        <ImageView
+        <com.meijialife.simi.ui.RoundImageView
             android:id="@+id/msg_iv_icon_url"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/card_icon_margin_left"
+            android:layout_marginRight="@dimen/card_icon_margin_left"
             android:layout_weight="1"
             android:padding="8dp"
-            android:src="@drawable/card_default_huiyi" />
+            android:src="@drawable/ic_defult_touxiang"
+            imagecontrol:border_inside_color="@color/simi_color_white"
+            imagecontrol:border_outside_color="@color/simi_color_white"
+            imagecontrol:border_thickness_in="1dp"
+            imagecontrol:border_thickness_out="1dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,8 +46,7 @@
                     android:layout_alignParentLeft="true"
                     android:gravity="center"
                     android:text="通知公告"
-                    android:textSize="16sp"
-                    />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/msg_tv_msg_time"
@@ -73,9 +80,8 @@
                     android:layout_height="0.1dp"
                     android:layout_below="@id/msg_tv_summary"
                     android:layout_marginTop="9dp"
-                    android:background="@color/simi_color_line_gray" 
-                    android:visibility="visible"
-                    />
+                    android:background="@color/simi_color_line_gray"
+                    android:visibility="visible" />
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
