--- a/res/layout/contact_choose_list.xml
+++ b/res/layout/contact_choose_list.xml
@@ -137,15 +137,15 @@
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginTop="4dp"
         android:text="我的好友" />
-
+    
      <com.handmark.pulltorefresh.library.PullToRefreshListView
             xmlns:ptr="http://schemas.android.com/apk/res-auto"
             android:id="@+id/pull_refresh_contact_list"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:cacheColorHint="#00000000"
-            android:divider="#19000000"
-            android:dividerHeight="2dp"
+            android:divider="@color/home1_color_gray"
+            android:dividerHeight="1dp"
             android:fadingEdge="none"
             android:fastScrollEnabled="false"
             android:footerDividersEnabled="false"
