--- a/res/layout/friend_list_item.xml
+++ b/res/layout/friend_list_item.xml
@@ -3,19 +3,19 @@
     xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-     >
+    android:descendantFocusability="blocksDescendants"
+    android:orientation="vertical" >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/simi_color_white"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:focusableInTouchMode="false"
-        android:focusable="false"
         android:clickable="false"
-         >
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin" >
+
         <com.meijialife.simi.ui.RoundImageView
             android:id="@+id/item_iv_icon"
             android:layout_width="35dp"
@@ -35,43 +35,59 @@
             android:layout_marginLeft="18dp"
             android:layout_toRightOf="@id/item_iv_icon"
             android:text="" />
-         <TextView
+
+        <TextView
             android:id="@+id/item_tv_mobile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/item_tv_name"
             android:text=""
-            android:visibility="gone"
-             />
-       <TextView
+            android:visibility="gone" />
+
+        <TextView
             android:id="@+id/item_tv_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-           />
- 		<TextView
+            android:visibility="gone" />
+
+        <TextView
             android:id="@+id/item_tv_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-           />
-       
-         <CheckBox
-             android:id="@+id/cb_check_box"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_alignBaseline="@id/item_tv_name"
-             android:layout_alignParentRight="true"
-             android:gravity="center_vertical"
-             android:text=""
-             android:visibility="gone"
-             android:focusableInTouchMode="false"
-             android:focusable="false"
-             android:clickable="false"
-             android:checked="false"
-              />
-  
+            android:visibility="gone" />
+
+        <CheckBox
+            android:id="@+id/cb_check_box"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@id/item_tv_name"
+            android:layout_alignParentRight="true"
+            android:checked="false"
+            android:clickable="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:gravity="center_vertical"
+            android:text=""
+            android:visibility="gone" />
+
+        <LinearLayout
+            android:id="@+id/m_ll_checked"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="center"
+            android:orientation="horizontal"
+            android:visibility="gone" >
+
+            <ImageView
+                android:id="@+id/m_iv_friend"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:src="@drawable/friend_select"
+                 />
+        </LinearLayout>
     </RelativeLayout>
 
 </LinearLayout>
