--- a/res/layout/layout_main_plus_express.xml
+++ b/res/layout/layout_main_plus_express.xml
@@ -2,13 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/activity_bg_color"
-   >
+    android:background="@color/activity_bg_color" >
 
     <include
         android:id="@+id/view_title_bar"
         layout="@layout/layout_title_bar" />
-    
+
     <LinearLayout
         android:id="@+id/layout_view4"
         android:layout_width="match_parent"
@@ -35,8 +34,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/view_title_bar"
         android:layout_above="@id/layout_view4"
+        android:layout_below="@id/view_title_bar"
         android:background="@color/simi_color_white"
         android:fillViewport="true"
         android:scrollbars="none" >
@@ -69,21 +68,83 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
+                        android:layout_centerInParent="true"
                         android:gravity="center_vertical"
                         android:inputType="number"
                         android:text="快递单号"
                         android:textSize="16sp" />
 
+                    <ImageView
+                        android:id="@+id/m_scan_zbar"
+                        android:layout_width="30dp"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:src="@drawable/iconfont_saotiaoma" />
+
                     <EditText
                         android:id="@+id/m_express_no"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
+                        android:layout_centerInParent="true"
+                        android:layout_toLeftOf="@id/m_scan_zbar"
                         android:background="@null"
                         android:ellipsize="end"
-                        android:gravity="center_vertical"
+                        android:gravity="right"
                         android:hint="请输入信息!"
                         android:maxLength="20"
+                        android:textSize="14sp" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/cut_off_rule" />
+
+            <LinearLayout
+                android:id="@+id/m_ll_express_company"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:orientation="horizontal"
+                android:padding="2dp" >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="20dp"
+                    android:gravity="center" >
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:gravity="center_vertical"
+                        android:text="快递公司"
+                        android:textSize="16sp" />
+
+                    <ImageView
+                        android:id="@+id/arrow"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:background="@drawable/icon_plus_arrowright" />
+
+                    <TextView
+                        android:id="@+id/m_express_company"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="20dp"
+                        android:layout_toLeftOf="@id/arrow"
+                        android:background="@null"
+                        android:ellipsize="end"
+                        android:gravity="right"
+                        android:maxLength="20"
+                        android:singleLine="true"
+                        android:text=""
                         android:textSize="14sp" />
                 </RelativeLayout>
             </LinearLayout>
@@ -111,82 +172,37 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
-                        android:gravity="center_vertical"
-                        android:text="快递公司"
-                        android:textSize="16sp" />
-
-                    <EditText
-                        android:id="@+id/m_express_company"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:background="@null"
-                        android:ellipsize="end"
-                        android:gravity="center_vertical"
-                        android:hint="请输入信息!"
-                        android:maxLength="20"
-                        android:inputType="number"
-                        android:textSize="14sp" />
-                </RelativeLayout>
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="@color/cut_off_rule" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:orientation="horizontal"
-                android:padding="2dp" >
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="20dp"
-                    android:gravity="center"
-                     >
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:text="收发件"
-                        android:textSize="16sp"
                         android:layout_marginTop="8dp"
                         android:gravity="center_horizontal"
-                         />
+                        android:text="收发件"
+                        android:textSize="16sp" />
 
                     <RadioGroup
                         android:id="@+id/m_express_type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_alignParentRight="true" >
+                        android:layout_alignParentRight="true"
+                        android:orientation="horizontal" >
 
                         <RadioButton
                             android:id="@+id/express_type1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="收件" 
-                            android:textSize="14sp"
+                            android:text="收件"
                             android:textColor="@color/simi_color_gray"
-                            />
+                            android:textSize="14sp" />
 
                         <RadioButton
                             android:id="@+id/express_type2"
-                             android:layout_width="wrap_content"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="寄件" 
-                             android:textSize="14sp"
+                            android:text="寄件"
                             android:textColor="@color/simi_color_gray"
-                            />
+                            android:textSize="14sp" />
                     </RadioGroup>
                 </RelativeLayout>
             </LinearLayout>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
@@ -204,44 +220,39 @@
                     android:layout_gravity="center"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="20dp"
-                    android:gravity="center"
-                     >
+                    android:gravity="center" >
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
-                        android:text="付费方式"
-                        android:textSize="16sp"
-                        android:gravity="center_vertical"
                         android:layout_marginTop="8dp"
-                        
-                         />
+                        android:gravity="center_vertical"
+                        android:text="付费方式"
+                        android:textSize="16sp" />
 
                     <RadioGroup
                         android:id="@+id/pay_type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_alignParentRight="true" >
+                        android:layout_alignParentRight="true"
+                        android:orientation="horizontal" >
 
                         <RadioButton
                             android:id="@+id/type1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="公费"
-                             android:textSize="14sp"
                             android:textColor="@color/simi_color_gray"
-                             />
+                            android:textSize="14sp" />
 
                         <RadioButton
                             android:id="@+id/type2"
-                             android:layout_width="wrap_content"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="自费"
-                             android:textSize="14sp"
-                            android:textColor="@color/simi_color_gray" 
-                            />
+                            android:textColor="@color/simi_color_gray"
+                            android:textSize="14sp" />
                     </RadioGroup>
                 </RelativeLayout>
             </LinearLayout>
@@ -256,7 +267,5 @@
                 layout="@layout/express_other" />
         </LinearLayout>
     </ScrollView>
-
-    
 
 </RelativeLayout>
