--- a/res/layout/layout_title_bar.xml
+++ b/res/layout/layout_title_bar.xml
@@ -4,17 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/title_bar_height"
     android:background="@color/title_background_color"
-    android:gravity="center_vertical"
-     >
+    android:gravity="center_vertical" >
 
     <ImageView
         android:id="@+id/title_btn_left"
         android:layout_width="130dp"
         android:layout_height="match_parent"
         android:focusable="true"
-        android:scaleType="center"
         android:paddingLeft="30dp"
         android:paddingRight="90dp"
+        android:scaleType="center"
         android:src="@drawable/title_left_back"
         android:visibility="gone" />
 
@@ -32,21 +31,19 @@
         android:text=""
         android:textColor="@color/title_text_color"
         android:textSize="@dimen/title_bar_text_size" />
-    
-    
-        <TextView
-            android:id="@+id/activity_selectimg_send"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="8dp"
-            android:gravity="center"
-            android:text="保存"
-            android:textColor="@color/text_normal"
-            android:textSize="20sp"
-            android:visibility="gone"
-            />
+
+    <TextView
+        android:id="@+id/activity_selectimg_send"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="8dp"
+        android:gravity="center"
+        android:text="保存"
+        android:textColor="@color/text_normal"
+        android:textSize="20sp"
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/title_btn_right"
@@ -75,11 +72,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textColor="@color/simi_color_red"
-            android:text="编辑"
             android:gravity="center"
+            android:text="编辑"
+            android:textColor="@color/simi_color_red"
             android:textSize="15sp" />
     </RelativeLayout>
+
     <RelativeLayout
         android:id="@+id/m_rl_friend_add"
         android:layout_width="@dimen/title_bar_height"
@@ -94,10 +92,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@drawable/company_jiahao"
-            android:gravity="center"
             android:layout_marginRight="20dp"
-             />
+            android:gravity="center"
+            android:src="@drawable/company_jiahao" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/m_rl_meeting"
+        android:layout_width="@dimen/title_bar_height"
+        android:layout_height="@dimen/title_bar_height"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="center_vertical"
+        android:focusable="true"
+        android:visibility="gone" >
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginRight="20dp"
+            android:gravity="center"
+            android:src="@drawable/iconfont_sousuo" />
     </RelativeLayout>
 
 </RelativeLayout>
