--- a/res/layout/main_plus_leave_item.xml
+++ b/res/layout/main_plus_leave_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dip"
@@ -10,16 +11,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
-
-        <ImageView
+        
+         <com.meijialife.simi.ui.RoundImageView
             android:id="@+id/m_center_icon"
             android:layout_width="55dp"
             android:layout_height="55dp"
-            android:layout_gravity="center"
+            android:layout_centerVertical="true"
             android:layout_margin="10dp"
+            android:layout_gravity="center"
             android:layout_weight="2"
-            android:background="@color/simi_color_white"
-            android:contentDescription="@string/app_name" />
+            android:src="@drawable/iconfont_tongxunbu"
+            imagecontrol:border_inside_color="@color/simi_color_white"
+            imagecontrol:border_outside_color="@color/simi_color_white"
+            imagecontrol:border_thickness_in="1dp"
+            imagecontrol:border_thickness_out="1dp"
+             />
 
         <LinearLayout
             android:layout_width="match_parent"
