--- a/res/layout/person_scroll_view.xml
+++ b/res/layout/person_scroll_view.xml
@@ -169,7 +169,7 @@
                         android:layout_height="40dp"
                         android:layout_centerHorizontal="true"
                         android:gravity="center_horizontal"
-                        android:src="@drawable/iconfont_jifen" />
+                        android:src="@drawable/iconfont_changyongdizhi" />
 
                     <TextView
                         android:layout_width="60dp"
@@ -177,7 +177,7 @@
                         android:layout_below="@id/iv_person_score"
                         android:layout_centerHorizontal="true"
                         android:gravity="center_horizontal"
-                        android:text="积分商城" />
+                        android:text="常用地址" />
                 </RelativeLayout>
             </LinearLayout>
         </LinearLayout>
@@ -211,7 +211,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_toRightOf="@id/iv_person_group"
-                    android:text="我的成长"
+                    android:text="会员服务"
                     android:textColor="@color/simi_color_dark_gray"
                     android:textStyle="bold" />
              
@@ -269,7 +269,7 @@
                         android:layout_height="40dp"
                         android:layout_centerHorizontal="true"
                         android:gravity="center_horizontal"
-                        android:src="@drawable/iconfont_renzhengkaoshi" />
+                        android:src="@drawable/iconfont_peixun" />
 
                     <TextView
                         android:layout_width="60dp"
@@ -277,7 +277,7 @@
                         android:layout_below="@id/iv_person_attest"
                         android:layout_centerHorizontal="true"
                         android:gravity="center_horizontal"
-                        android:text="认证考试" />
+                        android:text="培训讲座" />
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -294,7 +294,7 @@
                         android:layout_height="40dp"
                         android:layout_centerHorizontal="true"
                         android:gravity="center_horizontal"
-                        android:src="@drawable/iconfont_peixun" />
+                        android:src="@drawable/iconfont_jifen" />
 
                     <TextView
                         android:layout_width="60dp"
@@ -302,7 +302,7 @@
                         android:layout_below="@id/iv_person_train"
                         android:layout_centerHorizontal="true"
                         android:gravity="center_horizontal"
-                        android:text="培训" />
+                        android:text="积分商城" />
                 </RelativeLayout>
 
                 <RelativeLayout
