--- a/res/layout/layout_card_title_bar.xml
+++ b/res/layout/layout_card_title_bar.xml
@@ -42,6 +42,7 @@
         android:textSize="@dimen/title_bar_text_size" />
     
     <ImageView
+        android:id="@+id/m_title_icon"
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:src="@drawable/iconfont_yingyongbangzhu"
