--- a/res/layout/left_listview.xml
+++ b/res/layout/left_listview.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center"
-        android:textColor="#000"
-        android:textSize="20sp"
+        android:textColor="@color/simi_color_black"
+        android:textSize="16sp"
         android:text="矿泉水"/>
     <TextView
         android:id="@+id/tv_count"
