--- a/res/layout/personal_fragment.xml
+++ b/res/layout/personal_fragment.xml
@@ -113,7 +113,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="钱包"
+                            android:text="动态"
                             android:textColor="@android:color/white"
                             android:textSize="12sp" />
                     </LinearLayout>
@@ -144,7 +144,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="优惠券"
+                            android:text="好友"
                             android:textColor="@android:color/white"
                             android:textSize="12sp" />
                     </LinearLayout>
