--界面样式调整+新首页

--- a/res/layout/layout_friend_dynamic.xml
+++ b/res/layout/layout_friend_dynamic.xml
@@ -27,6 +27,8 @@
             android:smoothScrollbar="true"
             ptr:ptrAnimationStyle="flip"
             ptr:ptrListViewExtrasEnabled="false"
-            ptr:ptrScrollingWhileRefreshingEnabled="true" >
+            ptr:ptrScrollingWhileRefreshingEnabled="true"
+            android:layout_marginBottom="60dp"
+             >
         </com.handmark.pulltorefresh.library.PullToRefreshListView>
 </LinearLayout>
