--- a/res/layout/banner.xml
+++ b/res/layout/banner.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:orientation="vertical" 
+    android:layout_height="190dp"
     android:background="@color/bg_gv"
-    >
+    android:orientation="vertical" >
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="210dp" >
+        android:layout_height="190dp" >
 
         <com.meijialife.simi.ui.MyViewPager
             android:id="@+id/vp"
             android:layout_width="match_parent"
-            android:layout_height="180dp" />
+            android:layout_height="190dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dip"
             android:layout_gravity="bottom|center_horizontal"
-            android:layout_marginBottom="10dp"
-            android:gravity="center" >
+            android:gravity="center"
+            android:layout_marginBottom="20dp"
+             >
 
             <View
                 android:id="@+id/v_dot0"
@@ -31,48 +30,60 @@
 
             <View
                 android:id="@+id/v_dot1"
-                style="@style/dot_style" 
-                android:visibility="invisible"/>
+                style="@style/dot_style"
+                android:visibility="invisible" />
 
             <View
                 android:id="@+id/v_dot2"
-                style="@style/dot_style" 
-                android:visibility="invisible"/>
+                style="@style/dot_style"
+                android:visibility="invisible" />
 
             <View
                 android:id="@+id/v_dot3"
-                style="@style/dot_style" 
-                android:visibility="invisible"/>
+                style="@style/dot_style"
+                android:visibility="invisible" />
 
             <View
                 android:id="@+id/v_dot4"
                 style="@style/dot_style"
                 android:visibility="invisible" />
+            <View
+                android:id="@+id/v_dot5"
+                style="@style/dot_style"
+                android:visibility="gone" />
+            <View
+                android:id="@+id/v_dot6"
+                style="@style/dot_style"
+                android:visibility="gone" />
+            <View
+                android:id="@+id/v_dot7"
+                style="@style/dot_style"
+                android:visibility="gone" />
+            <View
+                android:id="@+id/v_dot8"
+                style="@style/dot_style"
+                android:visibility="gone" />
         </LinearLayout>
-           <LinearLayout
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_gravity="top|right"
-            android:gravity="center"
-           
-            >
-            
-               
-                <ImageView
-                    android:id="@+id/btn_saoma"
-                    android:layout_width="@dimen/bottom_bar_icon_width_size"
-                    android:layout_height="@dimen/bottom_bar_icon_height_size"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:src="@drawable/iconfont_saotiaoma"
-                    android:background="@drawable/rq_bg" 
-                    android:layout_gravity="center"
-                    android:padding="2dp"
-                    />
-               </LinearLayout>
-        
+            android:layout_marginTop="10dp"
+            android:gravity="center" >
+
+            <ImageView
+                android:id="@+id/btn_saoma"
+                android:layout_width="@dimen/bottom_bar_icon_width_size"
+                android:layout_height="@dimen/bottom_bar_icon_height_size"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:background="@drawable/rq_bg"
+                android:padding="2dp"
+                android:src="@drawable/iconfont_saotiaoma" />
+        </LinearLayout>
     </FrameLayout>
 
 </LinearLayout>
