--- a/res/layout/index_1.xml
+++ b/res/layout/index_1.xml
@@ -12,12 +12,6 @@
         android:layout_height="wrap_content" >
     </com.meijialife.simi.ui.CollapseCalendarView>
     
-    <!-- <View
-        android:id="@+id/v_line"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/layout_calendar"
-        android:background="@color/cut_off_rule" /> -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -48,24 +42,6 @@
             android:visibility="gone"
              />
         
-       <!--   <TextView
-            android:id="@+id/tv_tips"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:drawableTop="@drawable/no_card_tip"
-            android:gravity="center_horizontal"
-            android:paddingTop="10dp"
-            android:text="貌似这天你没事哦~" /> -->
-
-      <!--   <ListView
-            android:id="@+id/listview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/activity_bg_color" /> -->
-        
-        
           <com.handmark.pulltorefresh.library.PullToRefreshListView
             xmlns:ptr="http://schemas.android.com/apk/res-auto"
             android:id="@+id/pull_refresh_msg_list"
@@ -82,7 +58,9 @@
             android:smoothScrollbar="true"
             ptr:ptrAnimationStyle="flip"
             ptr:ptrListViewExtrasEnabled="false"
-            ptr:ptrScrollingWhileRefreshingEnabled="true" >
+            ptr:ptrScrollingWhileRefreshingEnabled="true"
+            android:layout_marginBottom="60dp"
+             >
         </com.handmark.pulltorefresh.library.PullToRefreshListView>
         
     </LinearLayout>
