--- a/res/layout/layout_friend.xml
+++ b/res/layout/layout_friend.xml
@@ -229,16 +229,6 @@
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginTop="4dp"
         android:text="我的好友" />
-    <!--
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@color/cut_off_rule"
-        android:dividerHeight="0.5dp"
-         >
-    </ListView>
-    -->
 
     <com.handmark.pulltorefresh.library.PullToRefreshListView
         xmlns:ptr="http://schemas.android.com/apk/res-auto"
@@ -255,7 +245,9 @@
         android:smoothScrollbar="true"
         ptr:ptrAnimationStyle="flip"
         ptr:ptrListViewExtrasEnabled="false"
-        ptr:ptrScrollingWhileRefreshingEnabled="true" >
+        ptr:ptrScrollingWhileRefreshingEnabled="true"
+        android:layout_marginBottom="60dp"
+         >
     </com.handmark.pulltorefresh.library.PullToRefreshListView>
 
 </LinearLayout>
