--- a/res/layout/layout_main_bottom.xml
+++ b/res/layout/layout_main_bottom.xml
@@ -42,13 +42,13 @@
                         android:layout_marginBottom="4.0dip"
                         android:layout_marginTop="5.0dip"
                         android:layout_gravity="center"
-                        android:background="@drawable/tab_index_bg_selector" />
+                        android:background="@drawable/tab_message_bg_selector" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:singleLine="true"
-                        android:text="日程"
+                        android:text="首页"
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:textColor="@color/tab_text_color_selector"
@@ -134,13 +134,13 @@
                         android:layout_marginTop="5.0dip"
                         android:layout_marginLeft="7dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/tab_message_bg_selector" />
+                        android:src="@drawable/tab_index_bg_selector" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:singleLine="true"
-                        android:text="圈子"
+                        android:text="日程"
                         android:layout_marginLeft="7dp"
                         android:gravity="center"
                         android:layout_gravity="center"
