--- a/res/layout/my_score_list_item.xml
+++ b/res/layout/my_score_list_item.xml
@@ -5,30 +5,40 @@
     android:gravity="center"
     android:orientation="vertical" >
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="5dp" >
-
-        <TextView
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal"
+         >
+        
+        
+         <TextView
             android:id="@+id/item_tv_order_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="收到技能卡费用"
-            android:textSize="22sp" />
-
-        <TextView
+            android:gravity="left"
+            android:layout_alignParentLeft="true"
+            android:layout_marginRight="10dp"
+            android:maxLines="2"
+            android:layout_weight="6"
+            android:text="说的"
+            android:textSize="18sp" />
+        
+          <TextView
             android:id="@+id/item_tv_order_pay"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:gravity="center"
+            android:gravity="right"
             android:text="+105"
+            android:layout_weight="6"
             android:textSize="16sp" />
-    </RelativeLayout>
+        
+      
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
