--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -160,8 +160,8 @@
         </style>
         <!--首页广告位轮播样式-->
       <style name="dot_style">
-        <item name="android:layout_width">5dip</item>
-        <item name="android:layout_height">5dip</item>
+        <item name="android:layout_width">8dp</item>
+        <item name="android:layout_height">8dp</item>
         <item name="android:background">@drawable/dot_normal</item>
         <item name="android:layout_marginLeft">1.5dip</item>
         <item name="android:layout_marginRight">1.5dip</item>
