--- a/res/layout/main_plus_center.xml
+++ b/res/layout/main_plus_center.xml
@@ -45,7 +45,7 @@
             android:background="@drawable/bg_personpage_tab_indicator"
             android:focusable="true"
             android:gravity="center"
-            android:text="成长与赚钱"
+            android:text="成长与提升"
             android:textColor="@drawable/personpage_tab_selector"
             android:textSize="15sp" />
     </LinearLayout>
