--- a/res/layout/layout_main_plus_trevel.xml
+++ b/res/layout/layout_main_plus_trevel.xml
@@ -14,11 +14,12 @@
         android:layout_height="match_parent"
         android:layout_below="@id/view_title_bar"
         android:fillViewport="true"
-        android:scrollbars="none" >
+        android:scrollbars="none"
+         >
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="wrap_content" >
 
             <LinearLayout
                 android:id="@+id/layout_view1"
@@ -67,9 +68,54 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_alignParentBottom="true"
-                        android:background="#e1e1e1" />
+                        android:background="#e1e1e1"
+                        android:visibility="gone" />
                 </RelativeLayout>
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="5dp"
+                    android:background="#e1e1e1" />
+
+                <RelativeLayout
+                    android:id="@+id/layout_select_phonenumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp" >
+
+                    <TextView
+                        android:id="@+id/tv_meetting_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="差旅人员"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_select_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/tv_meetting_title"
+                        android:layout_marginTop="5dp"
+                        android:text="请点击选择差旅人员"
+                        android:textColor="#a4a4a4" />
+
+                    <TextView
+                        android:id="@+id/tv_select_number"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignTop="@id/tv_meetting_title"
+                        android:drawablePadding="5dp"
+                        android:drawableRight="@drawable/icon_plus_arrowright"
+                        android:textColor="@color/red_text_color" />
+                </RelativeLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="5dp"
+                    android:background="#e1e1e1" />
                 <!-- 城市 -->
 
                 <LinearLayout
@@ -270,7 +316,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="5dp"
                     android:background="#e1e1e1" />
 
                 <RelativeLayout
@@ -311,10 +357,10 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="10dp"
                         android:layout_toLeftOf="@id/iv_arrow"
-                        android:gravity="right"
-                        android:ems="6"
-                        android:singleLine="true"
                         android:ellipsize="end"
+                        android:ems="6"
+                        android:gravity="right"
+                        android:singleLine="true"
                         android:textColor="@color/red_text_color" />
                 </RelativeLayout>
 
