--- a/res/layout/home_1.xml
+++ b/res/layout/home_1.xml
@@ -9,6 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="60dp"
+        android:divider="@color/transparent"    
+		android:dividerHeight="0px"
          />
     
 </RelativeLayout>
