--- a/res/layout/home_list_item.xml
+++ b/res/layout/home_list_item.xml
@@ -68,7 +68,9 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
+        android:layout_height="0.1dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="25dp"
         android:background="@color/simi_color_line_gray" />
 
 </LinearLayout>
