--- a/res/layout/layout_pay_activity.xml
+++ b/res/layout/layout_pay_activity.xml
@@ -157,7 +157,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="联系方式"
+                    android:text="服务方式"
                     android:textColor="@color/simi_color_gray" />
             </LinearLayout>
               <RelativeLayout
