--- a/res/layout/layout_title_bar.xml
+++ b/res/layout/layout_title_bar.xml
@@ -27,6 +27,8 @@
         android:layout_marginRight="15dp"
         android:focusable="false"
         android:gravity="center"
+        android:maxEms="10"
+        android:ellipsize="end"
         android:singleLine="true"
         android:text=""
         android:textColor="@color/title_text_color"
