--- a/res/layout/person_scroll_view.xml
+++ b/res/layout/person_scroll_view.xml
@@ -69,8 +69,8 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="3dp"
-                android:background="@color/activity_bg_color" />
+                android:layout_height="0.1dp"
+                android:background="@color/simi_color_line_gray" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -219,8 +219,8 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="3dp"
-                android:background="@color/activity_bg_color" />
+                android:layout_height="0.1dp"
+                android:background="@color/simi_color_line_gray" />
 
             <LinearLayout
                 android:id="@+id/ll_person_tools2"
@@ -373,8 +373,8 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:background="@color/activity_bg_color" />
+            android:layout_height="0.1dp"
+            android:background="@color/simi_color_line_gray" />
 
         <RelativeLayout
             android:id="@+id/rl_person_items4"
@@ -459,8 +459,8 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:background="@color/activity_bg_color" />
+            android:layout_height="0.1dp"
+            android:background="@color/simi_color_line_gray" />
     </LinearLayout>
 
 </ScrollView>
