--- a/res/layout/webview_activity.xml
+++ b/res/layout/webview_activity.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/activity_bg_color"
     android:orientation="vertical" >
 
-    <include
-        android:id="@+id/view_webview_title_bar"
-        layout="@layout/layout_webview_title_bar" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical" >
 
-    <include layout="@layout/common_webview_center" />
+        <include
+            android:id="@+id/view_webview_title_bar"
+            layout="@layout/layout_webview_title_bar" />
+
+        <include layout="@layout/common_webview_center" />
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/m_ll_bottom"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:visibility="gone" >
 
@@ -46,4 +54,4 @@
             android:textColor="@color/simi_color_white" />
     </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
