--- a/res/layout/webview_find_activity.xml
+++ b/res/layout/webview_find_activity.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/activity_bg_color"
     android:orientation="vertical" >
-    
-    <include 
-        android:id="@+id/view_webview_title_bar"
-        layout="@layout/layout_webview_title_bar"
-        />
-    
 
-    <include layout="@layout/common_webview_center" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical" >
+
+        <include
+            android:id="@+id/view_webview_title_bar"
+            layout="@layout/layout_webview_title_bar" />
+
+        <include layout="@layout/common_webview_center" />
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/rl_button"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
         android:visibility="gone" >
 
         <LinearLayout
@@ -37,4 +43,5 @@
             android:textSize="@dimen/title_bar_text_size"
             android:textStyle="bold" />
     </RelativeLayout>
-</LinearLayout>
+
+</RelativeLayout>
